# mesa-android-vulkan-wrapper

./: 0003-Android-Vulkan-wrapper.patch  0004-wsi-termux-x11.patch
src/vulkan/wrapper/: meson.build  wrapper_device.c  wrapper_instance.c  wrapper_physical_device.c  wrapper_private.h
src/vulkan/wsi/: wsi_common.c  wsi_common.h  wsi_common_private.h  wsi_common_x11.c
